Atcoder/RealTime/abc129/c/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/RealTime/abc129/c/main.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/RealTime/abc129/c/main.cpp:348:9: error: 'i' was not declared in this scope
  348 |     cnt[i]=(f[i]);
      |         ^
